--- a/index.html
+++ b/index.html
@@ -1,125 +1,121 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>GeoHunter</title>
+    <title>Canvas Map</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
             margin: 0;
-            padding: 0;
+            overflow: hidden;
+            background: #1a1a1a;
         }
-        #map {
-            height: 100vh;
-            width: 100vw;
+        #mapCanvas {
+            image-rendering: pixelated;
         }
-        .refresh-btn {
+        .controls {
             position: fixed;
             bottom: 20px;
             right: 20px;
             z-index: 1000;
-            padding: 12px 20px;
+        }
+        button {
+            padding: 12px;
+            margin: 5px;
             background: #4CAF50;
-            color: white;
             border: none;
-            border-radius: 25px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+            color: white;
+            border-radius: 5px;
             cursor: pointer;
         }
     </style>
-    <!-- Локальная версия OpenLayers -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.5.0/css/ol.css">
-    <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.5.0/build/ol.js"></script>
 </head>
 <body>
-    <div id="map"></div>
-    <button class="refresh-btn" onclick="updatePosition()">🔄 Обновить</button>
+    <canvas id="mapCanvas"></canvas>
+    <div class="controls">
+        <button onclick="zoomIn()">+</button>
+        <button onclick="zoomOut()">-</button>
+        <button onclick="centerMap()">📍</button>
+    </div>
 
     <script>
-        let map;
-        let playerMarker;
-        const tileProviders = [
-            {
-                name: 'OpenStreetMap',
-                const PROXY_URL = 'https://cors-anywhere.herokuapp.com/'; // Добавить перед url
-                url: PROXY_URL + tileProviders[currentTile].url
-                url: 'https://{a-c}.tile.openstreetmap.org/{z}/{x}/{y}.png'
-            },
-            {
-                name: 'CARTO',
-                url: 'https://{a-c}.basemaps.cartocdn.com/rastertiles/voyager/{z}/{x}/{y}{r}.png'
-            },
-            {
-                name: 'CyclOSM',
-                url: 'https://{a-c}.tile-cyclosm.openstreetmap.fr/cyclosm/{z}/{x}/{y}.png'
-            }
-        ];
-        let currentTile = 0;
+        const canvas = document.getElementById('mapCanvas');
+        const ctx = canvas.getContext('2d');
+        let zoom = 15;
+        let center = { lat: 44.9482, lng: 34.1003 }; // Симферополь
 
-        function initMap(lat, lon) {
-            map = new ol.Map({
-                target: 'map',
-                layers: [
-                    new ol.layer.Tile({
-                        source: new ol.source.XYZ({
-                            url: tileProviders[currentTile].url
-                        })
-                    })
-                ],
-                view: new ol.View({
-                    center: ol.proj.fromLonLat([lon, lat]),
-                    zoom: 15
-                })
-            });
+        // Размеры холста
+        function resizeCanvas() {
+            canvas.width = window.innerWidth;
+            canvas.height = window.innerHeight;
+        }
+        window.addEventListener('resize', resizeCanvas);
+        resizeCanvas();
 
-            // Маркер игрока
-            playerMarker = new ol.layer.Vector({
-                source: new ol.source.Vector(),
-                style: new ol.style.Style({
-                    image: new ol.style.Icon({
-                        src: 'https://docs.maptiler.com/openlayers/default-marker.png',
-                        scale: 0.8
-                    })
-                })
-            });
-            map.addLayer(playerMarker);
-            updatePosition(lat, lon);
+        // Преобразование координат
+        function lngToX(lng, zoom) {
+            return (lng + 180) * (canvas.width / 360) * Math.pow(2, zoom - 15);
         }
 
-        function updatePosition() {
-            navigator.geolocation.getCurrentPosition(pos => {
-                const lat = pos.coords.latitude;
-                const lon = pos.coords.longitude;
-                
-                const newPos = ol.proj.fromLonLat([lon, lat]);
-                map.getView().setCenter(newPos);
-                
-                playerMarker.getSource().clear();
-                playerMarker.getSource().addFeature(
-                    new ol.Feature(new ol.geom.Point(newPos))
-                );
+        function latToY(lat, zoom) {
+            return (90 - lat) * (canvas.height / 180) * Math.pow(2, zoom - 15);
+        }
 
-            }, error => {
-                console.error('Geolocation error:', error);
-                try {
-                    // Автоматическое переключение тайлов при ошибке
-                    currentTile = (currentTile + 1) % tileProviders.length;
-                    map.getLayers().item(0).setSource(
-                        new ol.source.XYZ({ url: tileProviders[currentTile].url })
-                    );
-                } catch(e) {
-                    document.getElementById('map').innerHTML = 
-                        '<p style="padding:20px">Карта недоступна. Проверьте интернет-соединение.</p>';
-                }
+        // Отрисовка карты
+        function drawMap() {
+            ctx.fillStyle = '#aad3df';
+            ctx.fillRect(0, 0, canvas.width, canvas.height);
+
+            // Сетка координат
+            ctx.strokeStyle = '#666';
+            ctx.lineWidth = 1;
+            for (let lng = -180; lng <= 180; lng += 10) {
+                const x = lngToX(lng, zoom);
+                ctx.beginPath();
+                ctx.moveTo(x, 0);
+                ctx.lineTo(x, canvas.height);
+                ctx.stroke();
+            }
+            for (let lat = -90; lat <= 90; lat += 10) {
+                const y = latToY(lat, zoom);
+                ctx.beginPath();
+                ctx.moveTo(0, y);
+                ctx.lineTo(canvas.width, y);
+                ctx.stroke();
+            }
+
+            // Маркер игрока
+            ctx.fillStyle = '#4CAF50';
+            ctx.beginPath();
+            ctx.arc(
+                canvas.width/2,
+                canvas.height/2,
+                10, 0, Math.PI * 2
+            );
+            ctx.fill();
+        }
+
+        // Управление
+        function zoomIn() { 
+            zoom = Math.min(20, zoom + 1);
+            drawMap();
+        }
+
+        function zoomOut() { 
+            zoom = Math.max(1, zoom - 1);
+            drawMap();
+        }
+
+        function centerMap() {
+            navigator.geolocation.getCurrentPosition(pos => {
+                center.lat = pos.coords.latitude;
+                center.lng = pos.coords.longitude;
+                drawMap();
             });
         }
 
         // Инициализация
         Telegram.WebApp.ready();
-        navigator.geolocation.getCurrentPosition(pos => {
-            initMap(pos.coords.latitude, pos.coords.longitude);
-        }, () => {
-            initMap(44.9482, 34.1003); // Fallback координаты
-        });
+        drawMap();
     </script>
 </body>
 </html>
