--- a/index.html
+++ b/index.html
@@ -1,121 +1,139 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Canvas Map</title>
+    <title>GeoHunter Pro</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        body {
-            margin: 0;
-            overflow: hidden;
-            background: #1a1a1a;
-        }
-        #mapCanvas {
-            image-rendering: pixelated;
-        }
-        .controls {
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            z-index: 1000;
-        }
-        button {
-            padding: 12px;
-            margin: 5px;
-            background: #4CAF50;
-            border: none;
-            color: white;
-            border-radius: 5px;
-            cursor: pointer;
-        }
+        body { margin: 0; padding: 0; }
+        #map { height: 100vh; width: 100vw; }
+        .controls { position: fixed; bottom: 20px; right: 20px; z-index: 1000; }
+        button { padding: 12px; margin: 5px; background: #4CAF50; border: none; color: white; border-radius: 5px; cursor: pointer; }
     </style>
+    
+    <!-- Блокировка Web3-расширений -->
+    <script>
+        window.addEventListener('load', () => {
+            delete window.ethereum;
+            delete window.web3;
+            Object.defineProperties(window, {
+                ethereum: { get: () => undefined },
+                web3: { get: () => undefined }
+            });
+        });
+    </script>
+
+    <!-- OpenLayers через jsDelivr -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ol@v7.3.0/ol.css">
+    <script src="https://cdn.jsdelivr.net/npm/ol@v7.3.0/dist/ol.js"></script>
 </head>
 <body>
-    <canvas id="mapCanvas"></canvas>
+    <div id="map"></div>
     <div class="controls">
-        <button onclick="zoomIn()">+</button>
-        <button onclick="zoomOut()">-</button>
-        <button onclick="centerMap()">📍</button>
+        <button onclick="updatePosition()">📍 Центрировать</button>
+        <button onclick="switchTileSource()">🔄 Тайлы</button>
     </div>
 
     <script>
-        const canvas = document.getElementById('mapCanvas');
-        const ctx = canvas.getContext('2d');
-        let zoom = 15;
-        let center = { lat: 44.9482, lng: 34.1003 }; // Симферополь
-
-        // Размеры холста
-        function resizeCanvas() {
-            canvas.width = window.innerWidth;
-            canvas.height = window.innerHeight;
-        }
-        window.addEventListener('resize', resizeCanvas);
-        resizeCanvas();
-
-        // Преобразование координат
-        function lngToX(lng, zoom) {
-            return (lng + 180) * (canvas.width / 360) * Math.pow(2, zoom - 15);
-        }
-
-        function latToY(lat, zoom) {
-            return (90 - lat) * (canvas.height / 180) * Math.pow(2, zoom - 15);
-        }
-
-        // Отрисовка карты
-        function drawMap() {
-            ctx.fillStyle = '#aad3df';
-            ctx.fillRect(0, 0, canvas.width, canvas.height);
-
-            // Сетка координат
-            ctx.strokeStyle = '#666';
-            ctx.lineWidth = 1;
-            for (let lng = -180; lng <= 180; lng += 10) {
-                const x = lngToX(lng, zoom);
-                ctx.beginPath();
-                ctx.moveTo(x, 0);
-                ctx.lineTo(x, canvas.height);
-                ctx.stroke();
+        let map;
+        let playerMarker;
+        const TILE_SOURCES = [
+            {
+                name: 'OSM Standard',
+                url: 'https://{a-c}.tile.openstreetmap.org/{z}/{x}/{y}.png'
+            },
+            {
+                name: 'OSM Humanitarian',
+                url: 'https://{a-c}.tile.openstreetmap.fr/hot/{z}/{x}/{y}.png'
+            },
+            {
+                name: 'ArcGIS World',
+                url: 'https://server.arcgisonline.com/ArcGIS/rest/services/World_Street_Map/MapServer/tile/{z}/{y}/{x}'
             }
-            for (let lat = -90; lat <= 90; lat += 10) {
-                const y = latToY(lat, zoom);
-                ctx.beginPath();
-                ctx.moveTo(0, y);
-                ctx.lineTo(canvas.width, y);
-                ctx.stroke();
-            }
+        ];
+        let currentTileIndex = 0;
 
-            // Маркер игрока
-            ctx.fillStyle = '#4CAF50';
-            ctx.beginPath();
-            ctx.arc(
-                canvas.width/2,
-                canvas.height/2,
-                10, 0, Math.PI * 2
-            );
-            ctx.fill();
-        }
-
-        // Управление
-        function zoomIn() { 
-            zoom = Math.min(20, zoom + 1);
-            drawMap();
-        }
-
-        function zoomOut() { 
-            zoom = Math.max(1, zoom - 1);
-            drawMap();
-        }
-
-        function centerMap() {
-            navigator.geolocation.getCurrentPosition(pos => {
-                center.lat = pos.coords.latitude;
-                center.lng = pos.coords.longitude;
-                drawMap();
+        function initMap(lat, lon) {
+            map = new ol.Map({
+                target: 'map',
+                layers: [createTileLayer()],
+                view: new ol.View({
+                    center: ol.proj.fromLonLat([lon, lat]),
+                    zoom: 15
+                })
             });
+
+            addPlayerMarker(lat, lon);
+            addErrorHandling();
+        }
+
+        function createTileLayer() {
+            return new ol.layer.Tile({
+                source: new ol.source.XYZ({
+                    url: TILE_SOURCES[currentTileIndex].url,
+                    crossOrigin: 'anonymous'
+                })
+            });
+        }
+
+        function addPlayerMarker(lat, lon) {
+            playerMarker = new ol.layer.Vector({
+                source: new ol.source.Vector({
+                    features: [
+                        new ol.Feature({
+                            geometry: new ol.geom.Point(
+                                ol.proj.fromLonLat([lon, lat])
+                            )
+                        })
+                    ]
+                }),
+                style: new ol.style.Style({
+                    image: new ol.style.Icon({
+                        src: 'data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="%234CAF50"><path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5S10.62 6 12 6s2.5 1.12 2.5 2.5S13.38 11.5 12 11.5z"/></svg>'
+                    })
+                })
+            });
+            map.addLayer(playerMarker);
+        }
+
+        function addErrorHandling() {
+            map.getLayers().item(0).getSource().on('tileloaderror', () => {
+                console.log('Ошибка загрузки тайлов. Переключаем источник...');
+                currentTileIndex = (currentTileIndex + 1) % TILE_SOURCES.length;
+                map.getLayers().item(0).setSource(createTileLayer().getSource());
+            });
+        }
+
+        function updatePosition() {
+            navigator.geolocation.getCurrentPosition(pos => {
+                const [lon, lat] = [pos.coords.longitude, pos.coords.latitude];
+                map.getView().setCenter(ol.proj.fromLonLat([lon, lat]));
+                playerMarker.getSource().clear();
+                playerMarker.getSource().addFeature(
+                    new ol.Feature(new ol.geom.Point(ol.proj.fromLonLat([lon, lat])))
+                );
+            }, error => {
+                alert(`Геолокация недоступна: ${error.message}`);
+            });
+        }
+
+        function switchTileSource() {
+            currentTileIndex = (currentTileIndex + 1) % TILE_SOURCES.length;
+            map.getLayers().item(0).setSource(createTileLayer().getSource());
+            alert(`Источник тайлов: ${TILE_SOURCES[currentTileIndex].name}`);
         }
 
         // Инициализация
         Telegram.WebApp.ready();
-        drawMap();
+        if (navigator.geolocation) {
+            navigator.geolocation.getCurrentPosition(pos => {
+                initMap(pos.coords.latitude, pos.coords.longitude);
+            }, () => {
+                initMap(44.9482, 34.1003); // Fallback координаты
+            });
+        } else {
+            initMap(44.9482, 34.1003);
+            alert('Геолокация не поддерживается браузером');
+        }
     </script>
 </body>
 </html>
