--- a/index.html
+++ b/index.html
@@ -1,139 +1,137 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>GeoHunter Pro</title>
+    <title>GeoHunter Ultimate</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body { margin: 0; padding: 0; }
-        #map { height: 100vh; width: 100vw; }
-        .controls { position: fixed; bottom: 20px; right: 20px; z-index: 1000; }
-        button { padding: 12px; margin: 5px; background: #4CAF50; border: none; color: white; border-radius: 5px; cursor: pointer; }
+        #map { position: absolute; top: 0; bottom: 0; width: 100%; }
+        .controls {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            z-index: 1000;
+            background: white;
+            padding: 8px;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+        }
     </style>
-    
-    <!-- Блокировка Web3-расширений -->
-    <script>
-        window.addEventListener('load', () => {
-            delete window.ethereum;
-            delete window.web3;
-            Object.defineProperties(window, {
-                ethereum: { get: () => undefined },
-                web3: { get: () => undefined }
-            });
-        });
-    </script>
-
-    <!-- OpenLayers через jsDelivr -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ol@v7.3.0/ol.css">
-    <script src="https://cdn.jsdelivr.net/npm/ol@v7.3.0/dist/ol.js"></script>
 </head>
 <body>
     <div id="map"></div>
     <div class="controls">
-        <button onclick="updatePosition()">📍 Центрировать</button>
-        <button onclick="switchTileSource()">🔄 Тайлы</button>
+        <button onclick="locateUser()">📍 Моё местоположение</button>
+        <button onclick="switchStyle()">🔄 Сменить стиль</button>
     </div>
 
+    <!-- Локальная версия MapLibre -->
+    <script src="https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.js"></script>
+    <link href="https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.css" rel="stylesheet">
+
     <script>
-        let map;
-        let playerMarker;
-        const TILE_SOURCES = [
+        // Конфигурация с резервными источниками
+        const mapStyles = [
             {
-                name: 'OSM Standard',
-                url: 'https://{a-c}.tile.openstreetmap.org/{z}/{x}/{y}.png'
+                name: "OpenStreetMap",
+                url: "https://tile.openstreetmap.org/{z}/{x}/{y}.png",
+                attribution: '© <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a>'
             },
             {
-                name: 'OSM Humanitarian',
-                url: 'https://{a-c}.tile.openstreetmap.fr/hot/{z}/{x}/{y}.png'
+                name: "ArcGIS",
+                url: "https://server.arcgisonline.com/ArcGIS/rest/services/World_Street_Map/MapServer/tile/{z}/{y}/{x}",
+                attribution: '© Esri'
             },
             {
-                name: 'ArcGIS World',
-                url: 'https://server.arcgisonline.com/ArcGIS/rest/services/World_Street_Map/MapServer/tile/{z}/{y}/{x}'
+                name: "NASA Gibs",
+                url: "https://gibs.earthdata.nasa.gov/wmts/epsg3857/best/BlueMarble_ShadedRelief_Bathymetry/default//GoogleMapsCompatible_Level8/{z}/{y}/{x}.jpg",
+                attribution: '© NASA'
             }
         ];
-        let currentTileIndex = 0;
 
-        function initMap(lat, lon) {
-            map = new ol.Map({
-                target: 'map',
-                layers: [createTileLayer()],
-                view: new ol.View({
-                    center: ol.proj.fromLonLat([lon, lat]),
-                    zoom: 15
-                })
+        let currentStyle = 0;
+        let map;
+
+        function initMap(lng, lat) {
+            map = new maplibregl.Map({
+                container: 'map',
+                style: {
+                    version: 8,
+                    sources: {
+                        'raster-tiles': {
+                            type: 'raster',
+                            tiles: [mapStyles[currentStyle].url],
+                            tileSize: 256,
+                            attribution: mapStyles[currentStyle].attribution
+                        }
+                    },
+                    layers: [{
+                        id: 'simple-tiles',
+                        type: 'raster',
+                        source: 'raster-tiles',
+                        minzoom: 0,
+                        maxzoom: 19
+                    }]
+                },
+                center: [lng, lat],
+                zoom: 12
             });
 
-            addPlayerMarker(lat, lon);
-            addErrorHandling();
-        }
+            // Маркер игрока
+            const marker = new maplibregl.Marker({
+                color: "#4CAF50",
+                scale: 1.2
+            })
+            .setLngLat([lng, lat])
+            .addTo(map);
 
-        function createTileLayer() {
-            return new ol.layer.Tile({
-                source: new ol.source.XYZ({
-                    url: TILE_SOURCES[currentTileIndex].url,
-                    crossOrigin: 'anonymous'
-                })
-            });
-        }
-
-        function addPlayerMarker(lat, lon) {
-            playerMarker = new ol.layer.Vector({
-                source: new ol.source.Vector({
-                    features: [
-                        new ol.Feature({
-                            geometry: new ol.geom.Point(
-                                ol.proj.fromLonLat([lon, lat])
-                            )
-                        })
-                    ]
-                }),
-                style: new ol.style.Style({
-                    image: new ol.style.Icon({
-                        src: 'data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="%234CAF50"><path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5S10.62 6 12 6s2.5 1.12 2.5 2.5S13.38 11.5 12 11.5z"/></svg>'
-                    })
-                })
-            });
-            map.addLayer(playerMarker);
-        }
-
-        function addErrorHandling() {
-            map.getLayers().item(0).getSource().on('tileloaderror', () => {
-                console.log('Ошибка загрузки тайлов. Переключаем источник...');
-                currentTileIndex = (currentTileIndex + 1) % TILE_SOURCES.length;
-                map.getLayers().item(0).setSource(createTileLayer().getSource());
+            // Обработка ошибок
+            map.on('error', (e) => {
+                console.error('Map error:', e.error);
+                switchStyle();
             });
         }
 
-        function updatePosition() {
+        function locateUser() {
             navigator.geolocation.getCurrentPosition(pos => {
-                const [lon, lat] = [pos.coords.longitude, pos.coords.latitude];
-                map.getView().setCenter(ol.proj.fromLonLat([lon, lat]));
-                playerMarker.getSource().clear();
-                playerMarker.getSource().addFeature(
-                    new ol.Feature(new ol.geom.Point(ol.proj.fromLonLat([lon, lat])))
-                );
+                map.flyTo({
+                    center: [pos.coords.longitude, pos.coords.latitude],
+                    essential: true
+                });
             }, error => {
-                alert(`Геолокация недоступна: ${error.message}`);
+                alert('Геолокация недоступна: ' + error.message);
             });
         }
 
-        function switchTileSource() {
-            currentTileIndex = (currentTileIndex + 1) % TILE_SOURCES.length;
-            map.getLayers().item(0).setSource(createTileLayer().getSource());
-            alert(`Источник тайлов: ${TILE_SOURCES[currentTileIndex].name}`);
+        function switchStyle() {
+            currentStyle = (currentStyle + 1) % mapStyles.length;
+            map.setStyle({
+                version: 8,
+                sources: {
+                    'raster-tiles': {
+                        type: 'raster',
+                        tiles: [mapStyles[currentStyle].url],
+                        tileSize: 256,
+                        attribution: mapStyles[currentStyle].attribution
+                    }
+                },
+                layers: [{
+                    id: 'simple-tiles',
+                    type: 'raster',
+                    source: 'raster-tiles',
+                    minzoom: 0,
+                    maxzoom: 19
+                }]
+            });
+            alert('Стиль карты: ' + mapStyles[currentStyle].name);
         }
 
         // Инициализация
         Telegram.WebApp.ready();
-        if (navigator.geolocation) {
-            navigator.geolocation.getCurrentPosition(pos => {
-                initMap(pos.coords.latitude, pos.coords.longitude);
-            }, () => {
-                initMap(44.9482, 34.1003); // Fallback координаты
-            });
-        } else {
-            initMap(44.9482, 34.1003);
-            alert('Геолокация не поддерживается браузером');
-        }
+        initMap(34.1003, 44.9482); // Симферополь по умолчанию
+        
+        // Автоматическое определение местоположения
+        locateUser();
     </script>
 </body>
 </html>
