--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             display: none;
         }
     </style>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
     <div class="arjs-loader">Инициализация AR...</div>
