--- a/public/index.html
+++ b/public/index.html
@@ -46,5 +46,13 @@
     <script src="/js/telegram-api.js"></script>
     <script src="/js/ar-config.js"></script>
     <script src="/js/app.js"></script>
+    <script>
+    // Глобальная переменная для отладки
+    window.APP_DEBUG = {
+        sceneLoaded: false,
+        cameraAllowed: null,
+        arSystemReady: false
+    };
+    </script>
 </body>
 </html>
