--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,8 @@
             }
         };
     </script>
+    <!-- Локальный файл -->
+    <script src="/js/aframe.min.js"></script>
 </head>
 <body>
     <div class="loader">
